--- a/JAVAProject/.classpath
+++ b/JAVAProject/.classpath
@@ -3,6 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="motivationImage"/>
 	<classpathentry kind="src" path="routineImage"/>
+	<classpathentry kind="src" path="dietImage"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
